docs: infrastucture layer javadocs and specs updated.