@@ -6,27 +6,33 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 
 /**
- * Handles audio playback and PCM processing for the TTS service.
- * Manages the audio line and a dedicated playback thread.
- * Supports crossfading between audio chunks for smooth transitions.
+ * Owns the Java audio line and the {@code TTS-Playback} daemon thread.
+ *
+ * <p>A single persistent {@link SourceDataLine} is opened once and reused for
+ * the lifetime of the service. Reopening the line on every utterance introduced
+ * audible gaps and latency spikes on Windows.</p>
+ *
+ * <p>Applies a 30 ms crossfade between consecutive PCM chunks to eliminate
+ * clicks at chunk boundaries caused by phase discontinuities.</p>
  */
 public class TTSAudioPlayer implements AutoCloseable {
+
     private static final int SAMPLE_RATE = 24000;
     private static final int FADE_MS = 5;
     private static final int FADE_SAMPLES = (SAMPLE_RATE * FADE_MS) / 1000;
     private static final int PLAYBACK_CHUNK_BYTES = 8192;
-    private static final int CROSSFADE_MS = 30;  // 30ms crossfade between chunks
+    private static final int CROSSFADE_MS = 30;
     private static final int CROSSFADE_SAMPLES = (SAMPLE_RATE * CROSSFADE_MS) / 1000;
 
     private final TTSLogger ttsLogger;
     private final LinkedBlockingQueue<byte[]> playbackQueue = new LinkedBlockingQueue<>();
     private final AtomicBoolean interruptRequested = new AtomicBoolean(false);
-    
+
     private SourceDataLine persistentLine;
     private Thread playbackThread;
     private volatile boolean running = false;
     private volatile float volume = 1.0f;
-    private byte[] previousChunkTail = null;  // For crossfading
+    private byte[] previousChunkTail = null;
 
     public TTSAudioPlayer(TTSLogger ttsLogger) {
         this.ttsLogger = ttsLogger;
@@ -55,7 +61,7 @@ public class TTSAudioPlayer implements AutoCloseable {
     public void stop() {
         interruptRequested.set(true);
         playbackQueue.clear();
-        previousChunkTail = null;  // Clear crossfade buffer
+        previousChunkTail = null;
         if (persistentLine != null && persistentLine.isOpen()) {
             persistentLine.stop();
             persistentLine.flush();
@@ -75,19 +81,7 @@ public class TTSAudioPlayer implements AutoCloseable {
             try {
                 byte[] pcm = playbackQueue.poll(100, TimeUnit.MILLISECONDS);
                 if (pcm != null && !interruptRequested.get()) {
-                    // Apply crossfading if we have a previous chunk
-                    if (previousChunkTail != null && pcm.length > 0) {
-                        pcm = applyCrossfade(previousChunkTail, pcm);
-                    }
-                    
-                    playPcm(pcm);
-                    
-                    // Save tail of this chunk for next crossfade
-                    int tailBytes = Math.min(CROSSFADE_SAMPLES * 2, pcm.length);
-                    if (tailBytes > 0) {
-                        previousChunkTail = new byte[tailBytes];
-                        System.arraycopy(pcm, pcm.length - tailBytes, previousChunkTail, 0, tailBytes);
-                    }
+                    processAudioChunk(pcm);
                 }
             } catch (InterruptedException _) {
                 Thread.currentThread().interrupt();
@@ -97,6 +91,22 @@ public class TTSAudioPlayer implements AutoCloseable {
             }
         }
         closePersistentLine();
+    }
+
+    private void processAudioChunk(byte[] pcm) {
+        if (previousChunkTail != null && pcm.length > 0) {
+            pcm = applyCrossfade(previousChunkTail, pcm);
+        }
+        playPcm(pcm);
+        updatePreviousChunkTail(pcm);
+    }
+
+    private void updatePreviousChunkTail(byte[] pcm) {
+        int tailBytes = Math.min(CROSSFADE_SAMPLES * 2, pcm.length);
+        if (tailBytes > 0) {
+            previousChunkTail = new byte[tailBytes];
+            System.arraycopy(pcm, pcm.length - tailBytes, previousChunkTail, 0, tailBytes);
+        }
     }
 
     private boolean openPersistentLine() {
@@ -115,17 +125,13 @@ public class TTSAudioPlayer implements AutoCloseable {
     }
 
     private void playPcm(byte[] audioData) {
-        if ((persistentLine == null || !persistentLine.isOpen()) && !openPersistentLine()) {
-            return;
-        }
+        if ((persistentLine == null || !persistentLine.isOpen()) && !openPersistentLine()) return;
 
         int frameSize = persistentLine.getFormat().getFrameSize();
         for (int offset = 0; offset < audioData.length && !interruptRequested.get(); offset += PLAYBACK_CHUNK_BYTES) {
             int remaining = audioData.length - offset;
             int thisChunk = (Math.min(PLAYBACK_CHUNK_BYTES, remaining) / frameSize) * frameSize;
-            if (thisChunk > 0) {
-                persistentLine.write(audioData, offset, thisChunk);
-            }
+            if (thisChunk > 0) persistentLine.write(audioData, offset, thisChunk);
         }
 
         if (!interruptRequested.get()) {
@@ -143,14 +149,12 @@ public class TTSAudioPlayer implements AutoCloseable {
         }
     }
 
-    // --- Audio Processing Utilities ---
+    // --- PCM processing utilities ---
 
     public byte[] floatToPcm16(float[] samples) {
         byte[] pcm = new byte[samples.length * 2];
         for (int i = 0; i < samples.length; i++) {
-            float s = samples[i] * volume;
-            if (s > 1.0f) s = 1.0f;
-            if (s < -1.0f) s = -1.0f;
+            float s = Math.clamp(samples[i] * volume, -1.0f, 1.0f);
             short val = (short) (s * 32767.0f);
             pcm[i * 2] = (byte) (val & 0xFF);
             pcm[i * 2 + 1] = (byte) ((val >>> 8) & 0xFF);
@@ -161,13 +165,9 @@ public class TTSAudioPlayer implements AutoCloseable {
     public void applyFadeIn(byte[] pcm) {
         int samplesToFade = Math.min(FADE_SAMPLES, pcm.length / 2);
         for (int i = 0; i < samplesToFade && (i * 2 + 1) < pcm.length; i++) {
-            int lo = pcm[2 * i] & 0xFF;
-            int hi = pcm[2 * i + 1] & 0xFF;
-            short sample = (short) ((hi << 8) | lo);
+            short sample = readSample(pcm, i);
             float gain = (float) i / samplesToFade;
-            int scaled = Math.round(sample * gain);
-            pcm[2 * i] = (byte) (scaled & 0xFF);
-            pcm[2 * i + 1] = (byte) ((scaled >>> 8) & 0xFF);
+            writeSample(pcm, i, Math.round(sample * gain));
         }
     }
 
@@ -176,14 +176,19 @@ public class TTSAudioPlayer implements AutoCloseable {
         int samplesToFade = Math.min(FADE_SAMPLES, totalSamples);
         int startSample = totalSamples - samplesToFade;
         for (int i = startSample; i < totalSamples && (i * 2 + 1) < pcm.length; i++) {
-            int lo = pcm[2 * i] & 0xFF;
-            int hi = pcm[2 * i + 1] & 0xFF;
-            short sample = (short) ((hi << 8) | lo);
+            short sample = readSample(pcm, i);
             float gain = (float) (totalSamples - i) / samplesToFade;
-            int scaled = Math.round(sample * gain);
-            pcm[2 * i] = (byte) (scaled & 0xFF);
-            pcm[2 * i + 1] = (byte) ((scaled >>> 8) & 0xFF);
+            writeSample(pcm, i, Math.round(sample * gain));
         }
+    }
+
+    private static short readSample(byte[] pcm, int index) {
+        return (short) (((pcm[2 * index + 1] & 0xFF) << 8) | (pcm[2 * index] & 0xFF));
+    }
+
+    private static void writeSample(byte[] pcm, int index, int value) {
+        pcm[2 * index] = (byte) (value & 0xFF);
+        pcm[2 * index + 1] = (byte) ((value >>> 8) & 0xFF);
     }
 
     public byte[] generateSilence(int ms) {
@@ -194,57 +199,27 @@ public class TTSAudioPlayer implements AutoCloseable {
         return playbackQueue.isEmpty();
     }
 
-    /**
-     * Applies crossfading between two audio chunks for smooth transitions.
-     * 
-     * @param previousTail Tail of the previous chunk
-     * @param currentChunk Current chunk to play
-     * @return Crossfaded audio
-     */
     private byte[] applyCrossfade(byte[] previousTail, byte[] currentChunk) {
         int crossfadeBytes = Math.min(CROSSFADE_SAMPLES * 2, Math.min(previousTail.length, currentChunk.length));
-        if (crossfadeBytes < 4) {
-            return currentChunk;  // Not enough data to crossfade
-        }
-        
-        // Create result: previous (without tail) + crossfaded region + current (without head)
+        if (crossfadeBytes < 4) return currentChunk;
+
         int previousKeep = previousTail.length - crossfadeBytes;
         int currentKeep = currentChunk.length - crossfadeBytes;
         byte[] result = new byte[previousKeep + crossfadeBytes + currentKeep];
-        
-        // Copy non-crossfaded part of previous
-        if (previousKeep > 0) {
-            System.arraycopy(previousTail, 0, result, 0, previousKeep);
-        }
-        
-        // Crossfade region
+
+        if (previousKeep > 0) System.arraycopy(previousTail, 0, result, 0, previousKeep);
+
         for (int i = 0; i < crossfadeBytes; i += 2) {
-            int prevIdx = previousKeep + i;
-            int currIdx = i;
-            
-            // Read samples
-            short prevSample = (short) (((previousTail[prevIdx + 1] & 0xFF) << 8) | (previousTail[prevIdx] & 0xFF));
-            short currSample = (short) (((currentChunk[currIdx + 1] & 0xFF) << 8) | (currentChunk[currIdx] & 0xFF));
-            
-            // Calculate crossfade weights
+            short prevSample = (short) (((previousTail[previousKeep + i + 1] & 0xFF) << 8) | (previousTail[previousKeep + i] & 0xFF));
+            short currSample = (short) (((currentChunk[i + 1] & 0xFF) << 8) | (currentChunk[i] & 0xFF));
             float progress = (float) i / crossfadeBytes;
-            float prevWeight = 1.0f - progress;
-            float currWeight = progress;
-            
-            // Mix samples
-            int mixed = Math.round(prevSample * prevWeight + currSample * currWeight);
-            mixed = Math.max(-32768, Math.min(32767, mixed));
-            
-            // Write mixed sample
+            int mixed = Math.clamp(Math.round(prevSample * (1f - progress) + currSample * progress), -32768, 32767);
             result[previousKeep + i] = (byte) (mixed & 0xFF);
             result[previousKeep + i + 1] = (byte) ((mixed >>> 8) & 0xFF);
         }
-        
-        // Copy non-crossfaded part of current
-        if (currentKeep > 0) {
-            System.arraycopy(currentChunk, crossfadeBytes, result, previousKeep + crossfadeBytes, currentKeep);
-        }
-        
+
+        if (currentKeep > 0) System.arraycopy(currentChunk, crossfadeBytes, result, previousKeep + crossfadeBytes, currentKeep);
+
         return result;
     }
 
